<resources>
    <string name="app_name">SubsTracker</string>
    <string name="add_a_subscription">+ Add a subscription</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="next_payment">Next Payment</string>
    <string name="cycle">Cycle</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="remind_me">Remind me</string>
    <string name="currency">Currency</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="categories">Categories</string>
    <string name="payment_methods">Payment Methods</string>

    <string name="noItemText">Tap the New Task Button below to create a new task</string>
    <string name="action_settings">Settings</string>
    <string name="title">Sparky</string>
    <string name="newTaskTitle">New Task</string>
    <string name="newTaskText">Task</string>
    <string name="newDescText">Description</string>
    <string name="newDateText">Date</string>
    <string name="choose">Choose</string>
    <string name="newTimeText">Time</string>
    <string name="updateTaskTitle">Update Task</string>
    <string name="createTask">Create Task</string>
    <string name="updateTask">Update Task</string>
    <string name="clock_icon">clock icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="delete_task">Delete Task</string>
    <string name="add_a_description">add a description</string>
    <string name="add_a_task">add a task</string>
</resources>