<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentDark"
    tools:context=".TaskUpdate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="5dp"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="-122dp">

        <TextView
            android:id="@+id/updateTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/mainBG"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/updateTaskTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/titlecolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/updateTaskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/newTaskText"
            android:textColor="@color/timecolor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTaskTitle"
            app:layout_constraintVertical_bias="0.02" />

        <EditText
            android:id="@+id/updateTaskTitleBox"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/TextBoxColor"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:paddingLeft="3dp"
            android:paddingTop="2dp"
            android:paddingRight="3dp"
            android:paddingBottom="2dp"
            android:text=""
            android:textColor="@color/titleWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTaskText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/updateDescText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/newDescText"
            android:textColor="@color/timecolor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTaskTitleBox"
            app:layout_constraintVertical_bias="0.083" />

        <EditText
            android:id="@+id/updateDescTextBox"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@color/TextBoxColor"
            android:gravity="top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:paddingLeft="3dp"
            android:paddingTop="2dp"
            android:paddingRight="3dp"
            android:paddingBottom="2dp"
            android:text=""
            android:textColor="@color/titleWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateDescText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/updateDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/newDateText"
            android:textColor="@color/timecolor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateDescTextBox"
            app:layout_constraintVertical_bias="0.12" />

        <TextView
            android:id="@+id/updateDateTextBox"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:background="@color/TextBoxColor"
            android:ems="10"
            android:importantForAutofill="no"
            android:paddingLeft="3dp"
            android:paddingTop="2dp"
            android:paddingRight="3dp"
            android:paddingBottom="2dp"
            android:textColor="@color/titleWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateDescTextBox"
            app:layout_constraintVertical_bias="0.201"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/updateDateButton"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@color/ButtonColor"
            android:text="@string/choose"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toEndOf="@+id/updateDateTextBox"
            app:layout_constraintTop_toBottomOf="@+id/updateDescTextBox"
            app:layout_constraintVertical_bias="0.201" />

        <TextView
            android:id="@+id/updateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/newTimeText"
            android:textColor="@color/timecolor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateDateTextBox"
            app:layout_constraintVertical_bias="0.203" />

        <TextView
            android:id="@+id/updateTimeTextBox"
            android:layout_width="209dp"
            android:layout_height="32dp"
            android:background="@color/TextBoxColor"
            android:ems="10"
            android:importantForAutofill="no"
            android:paddingLeft="3dp"
            android:paddingTop="2dp"
            android:paddingRight="3dp"
            android:paddingBottom="2dp"
            android:textColor="@color/titleWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTimeText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/updateTimeButton"
            android:layout_width="101dp"
            android:layout_height="32dp"
            android:background="@color/ButtonColor"
            android:text="@string/choose"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toEndOf="@+id/updateTimeTextBox"
            app:layout_constraintTop_toBottomOf="@+id/updateDateButton"
            app:layout_constraintVertical_bias="0.317" />

        <Button
            android:id="@+id/updateTaskButton"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:background="@color/createButtonColor"
            android:shadowColor="#000000"
            android:shadowDx="5"
            android:shadowDy="2.9"
            android:shadowRadius="3"
            android:text="@string/updateTask"
            android:textColor="@color/titleWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTimeButton"
            app:layout_constraintVertical_bias="0.512" />

        <Button
            android:id="@+id/deleteTaskButton"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:background="@color/deleteButtonColor"
            android:shadowColor="#000000"
            android:shadowDx="5"
            android:shadowDy="2.9"
            android:shadowRadius="3"
            android:text="@string/delete_task"
            android:textColor="@color/titleWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTimeButton"
            app:layout_constraintVertical_bias="0.52" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>